[project]
name = "report-sh"
version = "0.1.0"
description = "AWS SSO Access Analysis and Graph Database Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aenum==2.2.6",
    "aiodns==3.2.0",
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.8.1",
    "aiosignal==1.3.2",
    "async-timeout==4.0.3",
    "attrs==25.1.0",
    "backoff==2.2.1",
    "boto3==1.37.1",
    "botocore==1.37.1",
    "cchardet==2.1.7",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==2.1.1",
    "frozenlist==1.5.0",
    "gremlinpython==3.5.2",
    "idna==3.10",
    "idna-ssl==1.1.0",
    "isodate==0.7.2",
    "jinja2==3.1.5",
    "jmespath==1.0.1",
    "markupsafe==3.0.2",
    "multidict==6.1.0",
    "narwhals==1.28.0",
    "neptune-python-utils @ git+https://github.com/awslabs/amazon-neptune-tools.git@e56dfd7e1835c2bc08d8eb27b5aa9929eba4ac40#subdirectory=neptune-python-utils",
    "nest-asyncio==1.6.0",
    "numpy==2.0.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "plotly==6.0.0",
    "propcache==0.3.0",
    "pyarrow==19.0.1",
    "pycares==4.5.0",
    "pycparser==2.22",
    "pylance==0.23.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "requests==2.32.3",
    "s3transfer==0.11.2",
    "six==1.17.0",
    "tornado==5.1.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==1.26.20",
    "websockets==9.1",
    "yarl==1.18.3",
]
